Fix dark mode scrollbars in Chrome (#471)

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -234,6 +234,8 @@ a[href*='.openhab.org'] .outbound
 /*** DARK MODE 😎 ***/
 
 @media (prefers-color-scheme: dark)
+    :root
+        color-scheme dark
     html, body
         background-color rgb(17, 17, 17)
         color rgb(221, 221, 221)
